<resources>
    <string name="app_name">BLECapturer</string>
    <string name="server">Server</string>
    <string name="serverIP"></string>
    <string name="clientIP"></string>
    <string name="capture_ble">BLE Capture</string>

    <string name="mac">MAC</string>
    <string name="protocol">Protocol</string>
    <string name="power">Power</string>
    <string name="filter">Filter</string>
    <string name="white_list">White list</string>
    <string name="add">Add</string>
    <string name="all_beacon_allowed">All beacons allowed</string>
    <string name="clear">Clear</string>

    <string name="save">Save</string>
    <string name="load">Load</string>

    <string-array name="protocols">
        <item>Eddystone</item>
        <item>Ibeacon</item>
        <item>Other</item>
    </string-array>

    <string name="create_campaign">Create campaign</string>
    <string name="db_name">DB name</string>
    <string name="db_not_created">DB not created</string>
    <string name="close_campaign">Close campaign</string>
    <string name="campaign">Campaign</string>
    <string name="off_mini">OFF</string>
    <string name="on_mini">ON</string>
</resources>