<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.WhiteListActivity">

    <TextView
        android:id="@+id/whiteListTitle"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/white_list"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/all_allowed_label"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:text="@string/all_beacon_allowed"
        android:textAlignment="center"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/whiteListRecyclerView"
        android:layout_width="412dp"
        android:layout_height="210dp" />

    <Button
        android:id="@+id/addFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
    <Button
        android:id="@+id/clearWhiteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <Button
        android:id="@+id/saveWhiteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
    <Button
        android:id="@+id/loadWhiteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load" />

</LinearLayout>