<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.CampaignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/databaseNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/db_not_created" />

        <TextView
            android:id="@+id/currentDatabaseName"
            android:layout_width="194dp"
            android:layout_height="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/createCampaignButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_campaign" />

    <Button
        android:id="@+id/closeCampaignButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_campaign" />
</LinearLayout>