<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ServerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/serverNameTextView"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:text="@string/server" />

            <TextView
                android:id="@+id/serverIPTextView"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:text="@string/serverIP" />

            <TextView
                android:id="@+id/clientIPTextView"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:text="@string/clientIP" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/toggleServerButton"
            android:layout_width="73dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:text="ToggleButton" />

    </LinearLayout>

</FrameLayout>